--- a/dapp/package.json
+++ b/dapp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Synapse-dapp",
+  "name": "aiheal-dapp",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -17,7 +17,7 @@
     "formidable": "^3.5.4",
     "framer-motion": "^12.23.22",
     "geist": "^1.5.1",
-    "next": "15.5.2",
+    "next": "15.5.10",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
